classification with machine learning

--- a/ML104-Classification.ipynb
+++ b/ML104-Classification.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Table of Contents\n",
     "\n",
-    "1. [Introduction](#Introduction) \n",
-    "2. [Understanding our dataset](#Understanding-our-dataset)\n",
-    "2. [Training a Binary Classifier](#Training-a-Binary-Classifier)\n",
-    "3. [Performance Measures](#Performance-Measures)\n",
-    "4. [Multiclass Classification](#Multiclass-Classification)\n",
-    "5. [Multilabel Classification](#Multilabel-Classification)\n",
-    "5. [Multioutput Classification](#Multioutput-Classification)\n",
-    "6. [Credits](#Credits)"
+    "1. [Introduction](#introduction) \n",
+    "2. [Understanding our dataset](#understanding-our-dataset)\n",
+    "2. [Training a Binary Classifier](#training-a-binary-classifier)\n",
+    "3. [Performance Measures](#performance-measures)\n",
+    "4. [Multiclass Classification](#multiclass-classification)\n",
+    "5. [Multilabel Classification](#multilabel-classification)\n",
+    "5. [Multioutput Classification](#multioutput-classification)\n",
+    "6. [Credits](#credits)"
    ]
   },
   {
