classification with machine learning

--- a/ML104-Classification.ipynb
+++ b/ML104-Classification.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Table of Contents\n",
     "\n",
-    "1. [Introduction](#introduction) \n",
-    "2. [Understanding our dataset](#understanding-our-dataset)\n",
-    "2. [Training a Binary Classifier](#training-a-binary-classifier)\n",
-    "3. [Performance Measures](#performance-measures)\n",
-    "4. [Multiclass Classification](#multiclass-classification)\n",
-    "5. [Multilabel Classification](#multilabel-classification)\n",
-    "5. [Multioutput Classification](#multioutput-classification)\n",
-    "6. [Credits](#credits)"
+    "1. [Introduction](#Introduction) \n",
+    "2. [Understanding our dataset](#Understanding-our-dataset)\n",
+    "2. [Training a Binary Classifier](#Training-a-Binary-Classifier)\n",
+    "3. [Performance Measures](#Performance-Measures)\n",
+    "4. [Multiclass Classification](#Multiclass-Classification)\n",
+    "5. [Multilabel Classification](#Multilabel-Classification)\n",
+    "5. [Multioutput Classification](#Multioutput-Classification)\n",
+    "6. [Credits](#Credits)"
    ]
   },
   {
@@ -229,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,X_test,y_train,y_test = X[:60000],X[60000:],y[:60000],y[60000:]\n"
+    "X_train,X_test,y_train,y_test = X[:60000],X[60000:],y[:60000],y[60000:]"
    ]
   },
   {
@@ -250,18 +250,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5becf004",
+   "id": "ebc7e0ee",
    "metadata": {},
    "source": [
-    "**Navigate to the Table of contents** click [here](#Table-of-Contents)"
+    "## Training a Binary Classifier"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "51eb1793",
+   "id": "0b067a13",
    "metadata": {},
    "source": [
-    "## Training a Binary Classifier"
+    "[Navigate to the Table of contents](#Table-of-Contents)"
    ]
   },
   {
@@ -377,18 +377,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8fc08e59",
-   "metadata": {},
-   "source": [
-    "**Navigate to the Table of contents** click [here](#Table-of-Contents)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "78cc0fa8",
    "metadata": {},
    "source": [
     "## Performance Measures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fc08e59",
+   "metadata": {},
+   "source": [
+    "[Navigate to the Table of contents](#Table-of-Contents)"
    ]
   },
   {
@@ -1549,18 +1549,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "863ee222",
-   "metadata": {},
-   "source": [
-    "**Navigate to the Table of contents** click [here](#Table-of-Contents)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "cdfae3f7",
    "metadata": {},
    "source": [
     "## Multiclass Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f38d1fea",
+   "metadata": {},
+   "source": [
+    "[Navigate to the Table of contents](#Table-of-Contents)"
    ]
   },
   {
@@ -2173,18 +2173,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a166b2a1",
-   "metadata": {},
-   "source": [
-    "**Navigate to the Table of contents** click [here](#Table-of-Contents)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "50c38c38",
    "metadata": {},
    "source": [
     "## Multilabel Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11f59e01",
+   "metadata": {},
+   "source": [
+    "[Navigate to the Table of contents](#Table-of-Contents)"
    ]
   },
   {
@@ -2313,18 +2313,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0980bd7f",
-   "metadata": {},
-   "source": [
-    "**Navigate to the Table of contents** click [here](#Table-of-Contents)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "48e40c17",
    "metadata": {},
    "source": [
     "## Multioutput Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b641a00b",
+   "metadata": {},
+   "source": [
+    "[Navigate to the Table of contents](#Table-of-Contents)"
    ]
   },
   {
@@ -2435,18 +2435,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334ec087",
-   "metadata": {},
-   "source": [
-    "**Navigate to the Table of contents** click [here](#Table-of-Contents)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "d536b242",
    "metadata": {},
    "source": [
     "## Credits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "334ec087",
+   "metadata": {},
+   "source": [
+    "[Navigate to the Table of contents](#Table-of-Contents)"
    ]
   },
   {
