classification with machine learning

--- a/Classification_Exercise00.ipynb
+++ b/Classification_Exercise00.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b6e34607",
+   "id": "417d0f17",
    "metadata": {},
    "source": [
     "## Question:"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12094cbd",
+   "id": "745dcf00",
    "metadata": {},
    "source": [
     "Try to build a classifier for the MNIST dataset that achieves over 97% accuracy on the test set. \n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84c014e2",
+   "id": "82e77373",
    "metadata": {},
    "source": [
     "## Solution:"
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2f09124",
+   "id": "a4e4b858",
    "metadata": {},
    "source": [
     "### Fetch the dataset "
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "df3d746c",
+   "id": "37529bbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "99455a45",
+   "id": "5acde90e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "157ce862",
+   "id": "17f98ce6",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a061d0da",
+   "id": "e91f7238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "59a998ce",
+   "id": "319e30a6",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9b583b9a",
+   "id": "c69553b8",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e515836a",
+   "id": "8077a88a",
    "metadata": {},
    "source": [
     "Since our data looks okay , with no missing values .Let's dive deeper"
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6565a9fe",
+   "id": "a7c976b5",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ef14abf",
+   "id": "cca7f118",
    "metadata": {},
    "source": [
     "This looks like a zero and indeed that's what the label says."
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d1fe0043",
+   "id": "a85f77e3",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9f11f4",
+   "id": "faa6f911",
    "metadata": {},
    "source": [
     "Let's change the dtype of the label , since most ML model take input as integers while this is represented  as a string."
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d3a0e7f7",
+   "id": "c57c4298",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d1d8ab",
+   "id": "ec961842",
    "metadata": {},
    "source": [
     "## Train our Classifier"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0f9e8a",
+   "id": "1eb39141",
    "metadata": {},
    "source": [
     "We have been hinted to use the KNeighborsClassifier as our model. But first let's split our dataset for training and testing."
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "fc70ebe3",
+   "id": "8f217f04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0df31125",
+   "id": "8269be73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "dcd3cc00",
+   "id": "8684c551",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "1ac7e864",
+   "id": "53532f1c",
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f948dd2",
+   "id": "259ea593",
    "metadata": {},
    "source": [
     "Already with above 96% accuracy , that looks good.But our target is 97%  accuracy."
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bdd11f1",
+   "id": "9fd1e6e9",
    "metadata": {},
    "source": [
     "## Fine-tune our model"
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f965053",
+   "id": "d894490a",
    "metadata": {},
    "source": [
     "#### Grid Search"
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82224f6a",
+   "id": "b35f750d",
    "metadata": {},
    "source": [
     "Scikit-Learn's GridSearchCV allows us to find a great combination of hyperparameter values which would otherwise be very tedious fiddling the hyperparameters manually."
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e489faa5",
+   "id": "1a5b2d2c",
    "metadata": {},
    "source": [
     "All we need to do is tell it which hyperparameters we want it to experiment with and what values to try out,and it will use cross-validation to evaluate all the possible combinations of hyperparameters values."
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "c7be2596",
+   "id": "2305aafa",
    "metadata": {
     "scrolled": true
    },
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "15d75b03",
+   "id": "ec999131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "0fc0f53d",
+   "id": "6bc976ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "351255bd",
+   "id": "2b7a7370",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6aca8ae",
+   "id": "126b006a",
    "metadata": {},
    "source": [
     "You can get the best parameters by this:"
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "2cba871c",
+   "id": "2f68e314",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "d9f08480",
+   "id": "e41d8fb4",
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af7a223",
+   "id": "8b1b578c",
    "metadata": {},
    "source": [
     "Our classifier has greatly improved its accuracy to above 96.9% . Almost there!"
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03b735df",
+   "id": "8107d72a",
    "metadata": {},
    "source": [
     "**Let's scale our data to improve its prediction**"
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e58e4833",
+   "id": "8e40c2c8",
    "metadata": {},
    "source": [
     "We'll scale our training set that is X_train and evaluate it's accuracy if it has improved or not."
@@ -498,7 +498,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "a1757ad8",
+   "id": "3488a58e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6ae2d64",
+   "id": "dfa555e3",
    "metadata": {},
    "source": [
     "Fit the scaler on the training data and transform it"
@@ -518,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "05fb9096",
+   "id": "85ac93c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef0e0d44",
+   "id": "b7280b8d",
    "metadata": {},
    "source": [
     "Let's fit our classifier, with best parameters on the scaled X_train"
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "bd32908d",
+   "id": "ad83b795",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "63867e1d",
+   "id": "dbcc6b73",
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d9334d",
+   "id": "219cf477",
    "metadata": {},
    "source": [
     "Yeah! The model has maintained it's accuracy."
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43bb857c",
+   "id": "898269b7",
    "metadata": {},
    "source": [
     "Let's test it on the test set"
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7ded85c8",
+   "id": "a95396ae",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "eed8837f",
+   "id": "6521425e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a16354",
+   "id": "7589b7dd",
    "metadata": {},
    "source": [
     "Let's us plot it to view "
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "0dc18476",
+   "id": "62f486dc",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a9c7430",
+   "id": "dcd6086c",
    "metadata": {},
    "source": [
     "The diagonal looks good ,since most images are on the main diagonal meaning that they were correctly classified."
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "437edb20",
+   "id": "9fc66b43",
    "metadata": {},
    "source": [
     "Nevertheless, we can see some brighter spots on the 9th column and the first column. "
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b533253b",
+   "id": "e7d15c29",
    "metadata": {},
    "source": [
     "This shows that our column wrongly groups most image digits as 8 and 1 which aren't."
@@ -683,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "bb28e562",
+   "id": "78122891",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1825ee36",
+   "id": "c42272d6",
    "metadata": {},
    "source": [
     "## Conclusion"
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0df9b208",
+   "id": "67389b3f",
    "metadata": {},
    "source": [
     "Our classifier , after vigorous effort of fine tuning it with grid search and also scaling our input data, reached an accuracy of above 96.9% on the training set."
@@ -719,20 +719,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7844fd",
+   "id": "6abd7ba6",
    "metadata": {},
    "source": [
     "However , with our test set, the accuracy reduced to 95% which is acceptable as it shows that our model's capacity to make good predictions is okay."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f258f1b8",
+   "cell_type": "markdown",
+   "id": "a79084d5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "There were some areas in the dataset needed to be  improved as the classifier was unable "
+    "There were some areas in the dataset needed to be  improved as the classifier was quite confused while classifying them , known areas were classifying digits as 8 and 0."
    ]
   }
  ],
